--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="info info--movie">
                 <div class="table">
                     <div class="table-heading">
-                        <div class="table-heading__cell table-heading__cell--movie">Movie</div>
+                        <div class="table-heading__cell table-heading__cell--movie">Movieblah</div>
                         <div class="table-heading__cell table-heading__cell--quantity">Quantity</div>
                         <div class="table-heading__cell table-heading__cell--price">Price</div>
                     </div>
